--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,5 +6,6 @@ run_django_tests:
   stage: test
   script: 
     - pip install pipenv
+    - pipenv install
     - pipenv shell
     - python3 manage.py test
