--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,5 @@ run_django_tests:
   stage: test
   script: 
     - pip install pipenv
+    - pipenv install
     - pipenv run python3 manage.py test
