--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 psycopg2 = "*"
+pyhamcrest = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
