--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "*"
+djangorestframework = "*"
+psycopg2 = "*"
+pyhamcrest = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
