adding cors information

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ djangorestframework = "*"
 psycopg2 = "*"
 pyhamcrest = "*"
 gunicorn = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
