--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ psycopg2 = "*"
 pyhamcrest = "*"
 gunicorn = "*"
 django-cors-headers = "*"
+django-nose = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
