--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,10 @@ verify_ssl = true
 [packages]
 django = "*"
 djangorestframework = "*"
-psycopg2 = "*"
 pyhamcrest = "*"
 gunicorn = "*"
 django-cors-headers = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
