Added gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: python
 stages:
   - test
+  - deploy
 
 run_django_tests:
   stage: test
@@ -10,3 +11,22 @@ run_django_tests:
     - pip install pipenv
     - pipenv install
     - pipenv run python3 manage.py test
+
+deploy_to_stage:
+  stage: deploy
+  environment:
+    name: staging
+  script:
+    - brew install awsebcli
+    - eb deploy parlay-island-server-dev
+  only:
+    - master
+
+deploy_to_prod:
+  stage: deploy
+  environment:
+    name: prod
+  when: manual
+  script:
+    - brew install awsebcli
+    - eb deploy parlay-island-server-prod
