--- a/.ebextensions/02migrate.config
+++ b/.ebextensions/02migrate.config
@@ -1,5 +1,8 @@
 option_settings:
 container_commands:
-    database_migration:
+    00_install:
+        leader_only: true
+        command: "pipenv install"
+    01_database_migration:
         leader_only: true
         command: "pipenv run python3 manage.py migrate"
