--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pyhamcrest = "*"
 gunicorn = "*"
 django-cors-headers = "*"
 psycopg2-binary = "*"
+mock = "*"
 
 [requires]
 python_version = "3.7"
