--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ gunicorn = "*"
 django-cors-headers = "*"
 psycopg2-binary = "*"
 mock = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
