--- a/.ebextensions/02migrate.config
+++ b/.ebextensions/02migrate.config
@@ -1,7 +1,8 @@
 option_settings:
 container_commands:
+    00_install:
+        leader_only: true
+        command: "pipenv install"
     01_database_migration:
         leader_only: true
-        command:
-            - pipenv install
-            - pipenv run python3 manage.py migrate
+        command: "pipenv run python3 manage.py migrate"
