--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ django-cors-headers = "*"
 psycopg2-binary = "*"
 mock = "*"
 python-dotenv = "*"
+django-nose = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.7"
